--- a/index.html
+++ b/index.html
@@ -6403,7 +6403,7 @@
             });
             teacherPasswordSubmitBtn.addEventListener('click', () => {
                 const password = teacherPasswordInput.value.trim();
-                if (password === 'tpet') {
+                if (password === 'hdmwitmmG@@22') {
                     teacherPasswordModal.classList.add('hidden');
                     teacherPasswordInput.value = '';
                     showView('teacherClassroomCode');
